@@ -4,7 +4,6 @@ include(${QT_USE_FILE})
 
 ADD_DEFINITIONS(${QT_DEFINITIONS})
 ADD_DEFINITIONS(-DQT_PLUGIN)
-ADD_DEFINITIONS(-DQT_NO_DEBUG)
 ADD_DEFINITIONS(-DQT_SHARED)
 
 set(DESTINATION_DIR ${LIB_INSTALL_DIR}/avogadro/extensions)
@@ -28,40 +27,24 @@ set(gamessextension_SRCS gamessextension.cpp
 )
 qt4_wrap_ui(gamessextension_UIS_H gamessinputdialog.ui gamessefpmatchdialog.ui)
 qt4_automoc(${gamessextension_SRCS})
-ADD_LIBRARY(gamessextension SHARED ${gamessextension_SRCS} ${gamessextension_UIS_H})
-TARGET_LINK_LIBRARIES(gamessextension
-	${OPENBABEL2_LIBRARIES}
-	${QT_LIBRARIES}
-    ${OPENGL_LIBRARIES}
-	avogadro-lib
-)
-INSTALL(TARGETS gamessextension DESTINATION ${DESTINATION_DIR})
+add_library(gamessextension MODULE ${gamessextension_SRCS} ${gamessextension_UIS_H})
+install(TARGETS gamessextension DESTINATION ${DESTINATION_DIR})
 
 ### Properties
 set(propextension_SRCS propmodel.cpp propextension.cpp)
-#qt4_wrap_ui(propextension_UIS_H )
 qt4_automoc(${propextension_SRCS})
-ADD_LIBRARY(propextension SHARED ${propextension_SRCS} ${propextension_UIS_H})
-TARGET_LINK_LIBRARIES(propextension
-	${OPENBABEL2_LIBRARIES}
-	${QT_LIBRARIES}
-    ${OPENGL_LIBRARIES}
-	avogadro-lib
-)
-INSTALL(TARGETS propextension DESTINATION ${DESTINATION_DIR})
+add_library(propextension MODULE ${propextension_SRCS} ${propextension_UIS_H})
+install(TARGETS propextension DESTINATION ${DESTINATION_DIR})
 
 ### Molecular Mechanics force fields
-set(forcefieldextension_SRCS forcefieldextension.cpp forcefielddialog.cpp constraintsdialog.cpp constraintsmodel.cpp conformersearchdialog.cpp)
-qt4_wrap_ui(forcefieldextension_UIS_H forcefielddialog.ui constraintsdialog.ui conformersearchdialog.ui)
+set(forcefieldextension_SRCS forcefieldextension.cpp forcefielddialog.cpp
+  constraintsdialog.cpp constraintsmodel.cpp conformersearchdialog.cpp)
+qt4_wrap_ui(forcefieldextension_UIS_H forcefielddialog.ui constraintsdialog.ui
+  conformersearchdialog.ui)
 qt4_automoc(${forcefieldextension_SRCS})
-ADD_LIBRARY(forcefieldextension SHARED ${forcefieldextension_SRCS} ${forcefieldextension_UIS_H})
-TARGET_LINK_LIBRARIES(forcefieldextension
-	${OPENBABEL2_LIBRARIES}
-	${QT_LIBRARIES}
-    ${OPENGL_LIBRARIES}
-	avogadro-lib
-)
-INSTALL(TARGETS forcefieldextension DESTINATION ${DESTINATION_DIR})
+add_library(forcefieldextension MODULE ${forcefieldextension_SRCS}
+  ${forcefieldextension_UIS_H})
+install(TARGETS forcefieldextension DESTINATION ${DESTINATION_DIR})
 
 ### Docking
 ###set(dockingextension_SRCS dockingextension.cpp liganddialog.cpp pocketdialog.cpp)
@@ -80,51 +63,27 @@ INSTALL(TARGETS forcefieldextension DESTINATION ${DESTINATION_DIR})
 ### hydrogens
 set(hydrogensextension_SRCS hydrogensextension.cpp)
 qt4_automoc(${hydrogensextension_SRCS})
-ADD_LIBRARY(hydrogensextension SHARED ${hydrogensextension_SRCS})
-TARGET_LINK_LIBRARIES(hydrogensextension
-	${OPENBABEL2_LIBRARIES}
-	${QT_LIBRARIES}
-    ${OPENGL_LIBRARIES}
-	avogadro-lib
-)
-INSTALL(TARGETS hydrogensextension DESTINATION ${DESTINATION_DIR})
+add_library(hydrogensextension MODULE ${hydrogensextension_SRCS})
+install(TARGETS hydrogensextension DESTINATION ${DESTINATION_DIR})
 
 ### Selections
 set(selectextension_SRCS selectextension.cpp)
 qt4_automoc(${selectextension_SRCS})
-ADD_LIBRARY(selectextension SHARED ${selectextension_SRCS})
-TARGET_LINK_LIBRARIES(selectextension
-	${OPENBABEL2_LIBRARIES}
-	${QT_LIBRARIES}
-    ${OPENGL_LIBRARIES}
-	avogadro-lib
-)
-INSTALL(TARGETS selectextension DESTINATION ${DESTINATION_DIR})
+add_library(selectextension MODULE ${selectextension_SRCS})
+install(TARGETS selectextension DESTINATION ${DESTINATION_DIR})
 
 ### unit cells
 set(unitcellextension_SRCS unitcellextension.cpp unitcellparamdialog.cpp)
 qt4_wrap_ui(unitcellextension_UIS_H unitcellparamdialog.ui)
 qt4_automoc(${unitcellextension_SRCS})
-ADD_LIBRARY(unitcellextension SHARED ${unitcellextension_SRCS} ${unitcellextension_UIS_H})
-TARGET_LINK_LIBRARIES(unitcellextension
-	${OPENBABEL2_LIBRARIES}
-	${QT_LIBRARIES}
-    ${OPENGL_LIBRARIES}
-	avogadro-lib
-)
-INSTALL(TARGETS unitcellextension DESTINATION ${DESTINATION_DIR})
+add_library(unitcellextension MODULE ${unitcellextension_SRCS} ${unitcellextension_UIS_H})
+install(TARGETS unitcellextension DESTINATION ${DESTINATION_DIR})
 
 ### h->methyl
 set(h2methylextension_SRCS h2methylextension.cpp)
 qt4_automoc(${h2methylextension_SRCS})
-ADD_LIBRARY(h2methylextension SHARED ${h2methylextension_SRCS})
-TARGET_LINK_LIBRARIES(h2methylextension
-	${OPENBABEL2_LIBRARIES}
-	${QT_LIBRARIES}
-    ${OPENGL_LIBRARIES}
-	avogadro-lib
-)
-INSTALL(TARGETS h2methylextension DESTINATION ${DESTINATION_DIR})
+add_library(h2methylextension MODULE ${h2methylextension_SRCS})
+install(TARGETS h2methylextension DESTINATION ${DESTINATION_DIR})
 
 ### WiiTrack
 #set(wiitrackextension_SRCS wiitrackextension.cpp)
@@ -142,31 +101,18 @@ INSTALL(TARGETS h2methylextension DESTINATION ${DESTINATION_DIR})
 
 ### Orbitals
 set(orbitalextension_SRCS orbitalextension.cpp orbitaldialog.cpp
-    basisset.cpp gaussianfchk.cpp
-)
+    basisset.cpp gaussianfchk.cpp)
 qt4_wrap_ui(orbitalextension_UIS_H orbitaldialog.ui)
 qt4_automoc(${orbitalextension_SRCS})
-ADD_LIBRARY(orbitalextension SHARED ${orbitalextension_SRCS} ${orbitalextension_UIS_H})
-TARGET_LINK_LIBRARIES(orbitalextension
-  ${OPENBABEL2_LIBRARIES}
-  ${QT_LIBRARIES}
-  ${OPENGL_LIBRARIES}
-  avogadro-lib
-)
-INSTALL(TARGETS orbitalextension DESTINATION ${DESTINATION_DIR})
+add_library(orbitalextension MODULE ${orbitalextension_SRCS} ${orbitalextension_UIS_H})
+install(TARGETS orbitalextension DESTINATION ${DESTINATION_DIR})
 
 ### Gaussian input deck generator
 set(gaussianextension_SRCS gaussianextension.cpp gaussianinputdialog.cpp)
 qt4_wrap_ui(gaussianextension_UIS_H gaussianinputdialog.ui)
 qt4_automoc(${gaussianextension_SRCS})
-ADD_LIBRARY(gaussianextension SHARED ${gaussianextension_SRCS} ${gaussianextension_UIS_H})
-TARGET_LINK_LIBRARIES(gaussianextension
-  ${OPENBABEL2_LIBRARIES}
-  ${QT_LIBRARIES}
-  ${OPENGL_LIBRARIES}
-  avogadro-lib
-)
-INSTALL(TARGETS gaussianextension DESTINATION ${DESTINATION_DIR})
+add_library(gaussianextension MODULE ${gaussianextension_SRCS} ${gaussianextension_UIS_H})
+install(TARGETS gaussianextension DESTINATION ${DESTINATION_DIR})
 
 if(BOOST_PYTHON_FOUND OR Boost_PYTHON_FOUND)
 	### python extensions
@@ -174,19 +120,12 @@ if(BOOST_PYTHON_FOUND OR Boost_PYTHON_FOUND)
 	set(pythonextension_SRCS pythonextension.cpp)
 	qt4_wrap_ui(pythonextension_UIS_H pythonterminalwidget.ui)
 	qt4_automoc(${pythonextension_SRCS})
-	ADD_LIBRARY(pythonextension SHARED ${pythonextension_SRCS} 
+	add_library(pythonextension MODULE ${pythonextension_SRCS}
 		${pythonextension_UIS_H})
-	TARGET_LINK_LIBRARIES(pythonextension
-		${OPENBABEL2_LIBRARIES}
-		${QT_LIBRARIES}
-		${OPENGL_LIBRARIES}
-		${Boost_LIBRARIES}
-		avogadro-lib
-	)
-	INSTALL(TARGETS pythonextension DESTINATION ${DESTINATION_DIR})
+	install(TARGETS pythonextension DESTINATION ${DESTINATION_DIR})
 
-	FILE(GLOB python_SCRIPTS "python/*.py")
-	INSTALL(FILES ${python_SCRIPTS} DESTINATION share/libavogadro/scripts)
+	file(GLOB python_SCRIPTS "python/*.py")
+	install(FILES ${python_SCRIPTS} DESTINATION share/libavogadro/scripts)
 endif(BOOST_PYTHON_FOUND OR Boost_PYTHON_FOUND)
 
 ### Animation
@@ -194,14 +133,8 @@ set(animationextension_SRCS animationextension.cpp animationdialog.cpp)
 qt4_add_resources(animationextension_RC_SRCS animation.qrc)
 qt4_wrap_ui(animationextension_UIS_H animationdialog.ui)
 qt4_automoc(${animationextension_SRCS})
-ADD_LIBRARY(animationextension SHARED ${animationextension_SRCS} 
+add_library(animationextension MODULE ${animationextension_SRCS}
 	${animationextension_UIS_H} ${animationextension_RC_SRCS} )
-TARGET_LINK_LIBRARIES(animationextension
-	${OPENBABEL2_LIBRARIES}
-	${QT_LIBRARIES}
-    ${OPENGL_LIBRARIES}
-	avogadro-lib
-)
-INSTALL(TARGETS animationextension DESTINATION ${DESTINATION_DIR})
+install(TARGETS animationextension DESTINATION ${DESTINATION_DIR})
 
 
